--- a/media/docker-compose.yml
+++ b/media/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - 5055:5055 # Overseer
       - 8191:8191 # Flaresolverr
       - 8181:8181 # Tautulli
+      - 8080:8080 # qBittorrent
     volumes:
       - ./gluetun:/gluetun
     environment:
@@ -45,17 +46,21 @@ services:
       - OPENVPN_PASSWORD=
       - SERVER_REGIONS=Netherlands
 
-  # Deluge
+  # qBittorrent
   # --
-  deluge:
-    image: lscr.io/linuxserver/deluge:latest
-    container_name: deluge
+  qbittorrent:
+    image: lscr.io/linuxserver/qbittorrent:latest
+    container_name: qbittorrent
     depends_on:
       - gluetun
     environment:
+      - PUID=1000
+      - PGID=1000
       - TZ=Europe/London
+      - WEBUI_PORT=8080
+      - TORRENTING_PORT=6881
     volumes:
-      - ./deluge/config:/config
+      - ./qbittorrent/config:/config
       - /mnt/media/downloads:/downloads
     network_mode: container:vpn
     restart: unless-stopped
@@ -84,7 +89,7 @@ services:
     container_name: radarr
     depends_on:
       - gluetun
-      - deluge
+      - qbittorrent
     environment:
       - PUID=1000
       - PGID=1000
@@ -103,7 +108,7 @@ services:
     container_name: sonarr
     depends_on:
       - gluetun
-      - deluge
+      - qbittorrent
     environment:
       - PUID=1000
       - PGID=1000
