Updated homepage and nginx config

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ named.conf.key
 
 # Cloudflare DNS token for traefik
 cf_dns_api_token.txt
+
+# Environmnt variables
+*.env
+
+# Homepage
+homepage/**/logs/
