--- a/media/docker-compose.yml
+++ b/media/docker-compose.yml
@@ -32,7 +32,6 @@ services:
       - 8989:8989 # Sonarr
       - 5055:5055 # Overseer
       - 8191:8191 # Flaresolverr
-      - 8181:8181 # Tautulli
       - 8080:8080 # qBittorrent
       - 6881:6881 # qBittorrent
       - 6881:6881/udp # qBittorrent
@@ -157,6 +156,8 @@ services:
     container_name: tautulli
     depends_on:
       - plex
+    ports:
+      - 8181:8181
     environment:
       - PUID=1001
       - PGID=1001
