--- a/homepage/docker-compose.yml
+++ b/homepage/docker-compose.yml
@@ -19,5 +19,5 @@ services:
       - HOMEPAGE_VAR_PRX_USERNAME=$HOMEPAGE_VAR_PRX_USERNAME
       - HOMEPAGE_VAR_PRX_PASSWORD=$HOMEPAGE_VAR_PRX_PASSWORD
       - HOMEPAGE_VAR_TRUENAS_KEY=$HOMEPAGE_VAR_TRUENAS_KEY
-      - HOMEPAGE_VAR_PLEX_TOKEN=$HOMEPAGE_VAR_PLEX_TOKEN
+      - HOMEPAGE_VAR_TAUTULLI_KEY=$HOMEPAGE_VAR_TAUTULLI_KEY
     restart: unless-stopped
