--- a/media/docker-compose.yml
+++ b/media/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - OPENVPN_USER=
       - OPENVPN_PASSWORD=
       - SERVER_REGIONS=Netherlands
+    restart: unless-stopped
 
   # qBittorrent
   # --
