--- a/kestra/docker-compose.yml
+++ b/kestra/docker-compose.yml
@@ -31,37 +31,13 @@ services:
         container_name: kestra
         pull_policy: always
         user: "root"
-        command: server standalone --worker-thread=128
+        command: server standalone --worker-thread=128 -c /app/config.yaml
         volumes:
             - kestra-data:/app/storage
             - /var/run/docker.sock:/var/run/docker.sock
             - /tmp/kestra-wd:/tmp/kestra-wd
-        environment:
-            KESTRA_CONFIGURATION: |
-                datasources:
-                    postgres:
-                    url: jdbc:postgresql://postgres:5432/kestra
-                    driverClassName: org.postgresql.Driver
-                    username: kestra
-                    password: k3str4
-                kestra:
-                    server:
-                    basic-auth:
-                        enabled: false
-                        username: "admin@example.com" # it must be a valid email address
-                        password: kestra
-                    repository:
-                    type: postgres
-                    storage:
-                    type: local
-                    local:
-                        base-path: "/app/storage"
-                    queue:
-                    type: postgres
-                    tasks:
-                    tmp-dir:
-                        path: /tmp/kestra-wd/tmp
-                    url: http://localhost:8080/
+            - ./config/config.yaml:/app/config.yaml:ro
+            - ./scripts:/app/scripts
         ports:
             - "8080:8080"
             - "8081:8081"
