--- a/dhcp/data/dhcpd.conf
+++ b/dhcp/data/dhcpd.conf
@@ -4,6 +4,6 @@ max-lease-time 7200;
 subnet 10.20.0.0 netmask 255.255.0.0 {
   range 10.20.10.100 10.20.10.254;
   option routers 10.20.0.1;
-  option domain-name-servers 10.20.0.1, 10.20.0.2, 10.20.0.3;
+  option domain-name-servers 10.20.0.2, 10.20.0.3;
   option domain-name "home.beantech.uk";
 }
